--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,7 @@ nav {
     z-index: 2;
 }
 
-.container {
+.navbar {
     /*background-color: pink;
     padding: var(--rhythm);*/
     margin: 0 auto;
