--- a/css/about.css
+++ b/css/about.css
@@ -69,16 +69,12 @@ body {
     display: inline-block;
 }
 
-.hamb {
-    width: 50px;
+.hamb img{
+    width: 45px;
     float: right;
     
 }
 
-.line {
-    border-bottom: 1px solid var(--foreground-color);
-    margin: 10px;
-}
 
 .navbar {
     padding: var(--rhythm);
@@ -202,6 +198,21 @@ ul.projects li a {
 
 
 /* menu */
+.back img {
+    width: 45px;
+    height: 45px;
+    float: right;
+}
+
+div.back {
+    width: 100%;
+    display: block;
+    z-index: 2;
+    padding: var(--rhythm);
+
+    position: absolute;
+}
+
 .menu {
     height: 100vh;
     width: 100%;
