--- a/css/index.css
+++ b/css/index.css
@@ -69,17 +69,12 @@ body {
     display: inline-block;
 }
 
-.hamb {
-    width: 50px;
+.hamb img {
+    width: 45px;
     float: right;
 }
 
-.line {
-    border-bottom: 1px solid var(--foreground-color);
-    margin: 10px;
-}
-
-nav {
+.navbar nav {
     position: absolute;
     float: left;
 
@@ -99,6 +94,8 @@ nav {
 
     position: relative;
 }
+
+/*body*/
 
 .intro {
     height: 100vh;
@@ -131,6 +128,22 @@ h1 {
 }
 
 /* menu */
+
+.back img {
+    width: 45px;
+    height: 45px;
+    float: right;
+}
+
+div.back {
+    width: 100%;
+    display: block;
+    z-index: 2;
+    padding: var(--rhythm);
+
+    position: absolute;
+}
+
 .menu {
     height: 100vh;
     width: 100%;
