--- a/css/posterpage.css
+++ b/css/posterpage.css
@@ -51,6 +51,7 @@ html {
 
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 
 body {
@@ -61,8 +62,77 @@ body {
     font-family: var(--font-light);
 }
 
+/*body*/
+h2 {
+    text-align: center;
+    font-family: var(--font-bold);
+    text-transform: uppercase;
+    font-size: 2rem;
+    margin: 2rem;
+    line-height: 2rem;
+    margin-top: 0;
+}
 
-/* nav bar*/
+
+.pic {
+    width: 20rem;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    display: block;
+    box-shadow: 2px 2px 10px var(--foreground-color);
+}
+
+p {
+    margin: 0 2.5rem;
+    text-wrap: pretty;
+    line-height: 2rem;
+}
+
+p + p {
+    margin-top: 1rem;
+}
+
+p.description {
+    font-family: var(--font-bold);
+    padding: 0.5rem;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    text-align: center;
+    text-transform: capitalize;
+    margin: 1rem 2rem;
+
+}
+
+
+.option {
+    margin: 2rem;
+}
+
+.option a {
+    text-decoration: none;
+    color: var(--foreground-color);
+}
+
+a:nth-child(2) {
+    float: right;
+}
+
+h3 {
+    font-family: var(--font-bold);
+    display: inline;
+}
+
+
+
+.option img {
+    width: 1.5rem;
+    display: inline;
+    vertical-align: middle;
+
+}
+
+
+/* nav bar */
 .logo {
     height: 45px;
     width: 45px;
@@ -71,66 +141,33 @@ body {
     display: inline-block;
 }
 
-.hamb img {
+.hamb img{
     width: 45px;
     float: right;
+    height: 45px;
 }
 
-.navbar nav {
-    position: absolute;
-    float: left;
 
-    /*background-color: blue;*/
+.navbar {
     padding: var(--rhythm);
-    margin: auto;
+    margin: 0 auto;
     width: 100%;
-    z-index: 2;
 }
-
 .navbar {
     /*background-color: pink;
     padding: var(--rhythm);*/
     margin: 0 auto;
-    height: 100vh;
+
     width: 100%;
 
     position: relative;
 }
 
-/*body*/
-
-.intro {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    display: table-cell;
-    vertical-align: middle;
-    padding: var(--rhythm);
-
-    font-size: 1rem;
-    font-family: var(--font-bold);
-    line-height: 2rem;
-
-    position: relative;
-}
 
 
-p, h1 {
-    margin: 0;
-    font-size: 1.5rem;
-    font-family: var(--font-regular);
-}
 
-h1 {
-    font-size: 4rem;
-    font-style: italic;
-    padding-top: 2rem;
-    font-family: var(--font-bold);
-    line-height: 4rem;
-}
 
 /* menu */
-
 .back img {
     width: 45px;
     height: 45px;
@@ -152,8 +189,7 @@ div.back {
     background-color: var(--foreground-color);
     color: var(--background-color);
     padding-top: 50%;
-    padding-bottom: 50%;
-    
+    padding-bottom: 50%;  
 }
 
 .menu ul {
@@ -176,7 +212,6 @@ div.back {
     text-transform: uppercase;
     text-decoration: none;
     color: var(--background-color);
-    list-style-type: none;
     text-align: center;
 }
 
@@ -185,6 +220,3 @@ div.back {
     color: var(--background-color);
     text-align: center;
 }
-
-
-
