:construction: add images

--- a/css/banhchung.css
+++ b/css/banhchung.css
@@ -97,6 +97,28 @@ h2 {
     margin-top: 0;
 }
 
+.pic {
+    width: 20rem;
+    margin: 0 auto;
+    margin-top: 1.5rem;
+    display: block;
+    box-shadow: 2px 2px 10px var(--foreground-color);
+}
+
+p {
+    margin: 0 2.5rem;
+    text-wrap: pretty;
+    line-height: 2rem;
+}
+
+p + p {
+    margin-top: 1rem;
+}
+
+p:first-of-type {
+    margin-top: 2rem;
+}
+
 /*previous - next*/
 .option {
     margin: 2rem;
