:construction: add html files and images

--- a/css/logo.css
+++ b/css/logo.css
@@ -99,6 +99,18 @@ h2 {
 
 .pic {
     width: 100%;
+    margin: 2rem 0;
+}
+
+figure img.pic {
+    margin-bottom: 0;
+}
+
+figcaption {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 0.75rem;
+    padding: 0.5rem;
 }
 
 p {
