--- a/css/menu.css
+++ b/css/menu.css
@@ -97,6 +97,27 @@ h2 {
     margin-top: 0;
 }
 
+.pic {
+    width: 100%;
+}
+
+.pic:last-of-type {
+    margin: 2rem 0;
+}
+
+p {
+    margin: 0 2.5rem;
+    text-wrap: pretty;
+    line-height: 2rem;
+}
+
+p + p {
+    margin-top: 1rem;
+}
+
+p:first-of-type {
+    margin-top: 2rem;
+}
 
 /*previous - next*/
 .option {
