--- a/css/projects.css
+++ b/css/projects.css
@@ -73,9 +73,9 @@ body {
 }
 
 .hamb img{
-    width: 45px;
+    width: 30px;
     float: right;
-    height: 45px;
+    height: 40px;
 }
 
 
@@ -101,13 +101,12 @@ h2 {
     text-transform: uppercase;
     font-size: 2rem;
     margin: 2rem;
-
 }
 
 
 img {
-    height: 20rem;
-    height: 20rem;
+    height: 100%;;
+    width: 100%;
     margin: 0 auto;
 
     display: block;
@@ -118,6 +117,10 @@ img {
     margin: 0 auto;
     min-width: 20rem;
     margin-top: 1rem;
+}
+
+.coverpic img:last-of-type {
+    height: 80%;
 }
 
 .coverpic a {
