--- a/css/about.css
+++ b/css/about.css
@@ -63,18 +63,16 @@ body {
 }
 
 /* nav bar */
-.logo {
-    height: 45px;
+.logo img {
+    height: 36px;
     width: 45px;
-    background-color: var(--foreground-color);
-    border-radius: 50%;
     display: inline-block;
 }
 
 .hamb img{
     width: 45px;
     float: right;
-    
+
 }
 
 
