--- a/css/contact.css
+++ b/css/contact.css
@@ -62,11 +62,9 @@ body {
 }
 
 /* nav bar */
-.logo {
-    height: 45px;
+.logo img {
+    height: 36px;
     width: 45px;
-    background-color: var(--foreground-color);
-    border-radius: 50%;
     display: inline-block;
 }
 
