--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,13 @@
 
 }
 
+@font-face {
+    font-family: 'spacegroteskbold';
+    src: url(../fonts/SpaceGrotesk-Bold.ttf) format('ttf');
+    font-weight: bold;
+    font-style: normal;
+}
+
 
 html {
     --color-surface: #f0f0f0;
@@ -43,7 +50,7 @@ html {
 
     --font-regular: 'poppinsregular', 'rubik', sans-serif;
     --font-light: 'poppinslight', var(--font-regular);
-    --font-bold: 'poppinsbold', var(--font-regular);
+    --font-bold: 'spacegroteskbold', var(--font-regular);
 
     --rhythm: 2rem;
 
@@ -63,17 +70,16 @@ body {
 
 
 /* nav bar*/
-.logo {
-    height: 45px;
+.logo img {
+    height: 36px;
     width: 45px;
-    background-color: var(--foreground-color);
-    border-radius: 50%;
     display: inline-block;
 }
 
 .hamb img {
-    width: 45px;
+    width: 30px;
     float: right;
+    height: 35px;
 }
 
 .navbar nav {
