--- a/css/posterpage.css
+++ b/css/posterpage.css
@@ -131,11 +131,9 @@ h3 {
 
 
 /* nav bar */
-.logo {
-    height: 45px;
+.logo img {
+    height: 36px;
     width: 45px;
-    background-color: var(--foreground-color);
-    border-radius: 50%;
     display: inline-block;
 }
 
