--- a/css/projects.css
+++ b/css/projects.css
@@ -33,6 +33,13 @@
 
 }
 
+@font-face {
+    font-family: 'spacegroteskbold';
+    src: url(../fonts/SpaceGrotesk-Bold.ttf) format('ttf');
+    font-weight: bold;
+    font-style: normal;
+}
+
 
 html {
     --color-surface: #f0f0f0;
@@ -64,18 +71,16 @@ body {
 
 
 /* nav bar */
-.logo {
-    height: 45px;
+.logo img {
+    height: 36px;
     width: 45px;
-    background-color: var(--foreground-color);
-    border-radius: 50%;
     display: inline-block;
 }
 
 .hamb img{
     width: 30px;
     float: right;
-    height: 40px;
+    height: 35px;
 }
 
 
