--- a/css/about.css
+++ b/css/about.css
@@ -208,7 +208,7 @@ ul.projects li a {
 div.back {
     width: 100%;
     display: block;
-    z-index: 2;
+    z-index: 20;
     padding: var(--rhythm);
 
     position: absolute;
@@ -219,8 +219,9 @@ div.back {
     width: 100%;
     background-color: var(--foreground-color);
     color: var(--background-color);
-    padding-top: 50%;
-    padding-bottom: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
