--- a/css/contact.css
+++ b/css/contact.css
@@ -97,8 +97,9 @@ body {
     width: 100%;
     background-color: var(--foreground-color);
     color: var(--background-color);
-    padding-top: 50%;
-    padding-bottom: 50%;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu ul {
