--- a/css/posterpage.css
+++ b/css/posterpage.css
@@ -173,7 +173,7 @@ h3 {
 div.back {
     width: 100%;
     display: block;
-    z-index: 2;
+    z-index: 20;
     padding: var(--rhythm);
 
     position: absolute;
@@ -184,8 +184,9 @@ div.back {
     width: 100%;
     background-color: var(--foreground-color);
     color: var(--background-color);
-    padding-top: 50%;
-    padding-bottom: 50%;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu ul {
