--- a/css/projects.css
+++ b/css/projects.css
@@ -35,22 +35,33 @@
 
 @font-face {
     font-family: 'spacegroteskbold';
-    src: url(../fonts/SpaceGrotesk-Bold.ttf) format('ttf');
-    font-weight: bold;
+    src: url('../fonts/spacegrotesk-bold-webfont.woff2') format('woff2'),
+         url('../fonts/spacegrotesk-bold-webfont.woff') format('woff');
+    font-weight: normal;
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'delagothicone';
+    src: url('../fonts/delagothicone-regular-webfont.woff2') format('woff2'),
+         url('../fonts/delagothicone-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 html {
     --color-surface: #f0f0f0;
     --color-light: #333333;
+    --color-accent-pink: #e80f8b;
+    --color-accent-yellow: #fbcd2c;
 
     --background-color: var(--color-surface);
     --foreground-color: var(--color-light);
 
     --font-regular: 'poppinsregular', 'rubik', sans-serif;
     --font-light: 'poppinslight', var(--font-regular);
-    --font-bold: 'poppinsbold', var(--font-regular);
+    --font-bold: 'delagothicone', var(--font-regular);
 
     --rhythm: 2rem;
 
@@ -68,13 +79,11 @@ body {
     
 }
 
-
-
 /* nav bar */
 .logo img {
-    height: 36px;
-    width: 45px;
+    height: 45px;
     display: inline-block;
+    width: 45px;
 }
 
 .hamb img{
@@ -106,6 +115,7 @@ h2 {
     text-transform: uppercase;
     font-size: 2rem;
     margin: 2rem;
+    margin-top: 0;
 }
 
 
@@ -157,7 +167,7 @@ img {
 div.back {
     width: 100%;
     display: block;
-    z-index: 2;
+    z-index: 20;
     padding: var(--rhythm);
 
     position: absolute;
@@ -168,8 +178,9 @@ div.back {
     width: 100%;
     background-color: var(--foreground-color);
     color: var(--background-color);
-    padding-top: 50%;
-    padding-bottom: 50%;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu ul {
