--- a/css/projectsample.css
+++ b/css/projectsample.css
@@ -71,8 +71,9 @@ body {
 
 .hamb img{
     width: 45px;
-    float: right;
-    
+    height: 36px;
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -80,6 +81,10 @@ body {
     padding: var(--rhythm);
     margin: 0 auto;
     width: 100%;
+}
+
+nav a {
+    align-self: center;
 }
 
 /*body*/
@@ -160,8 +165,9 @@ div.back {
     width: 100%;
     background-color: var(--foreground-color);
     color: var(--background-color);
-    padding-top: 50%;
-    padding-bottom: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
     z-index: 30;
     position: relative;
