--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -152,7 +152,7 @@ h3 {
 div.back {
     width: 100%;
     display: block;
-    z-index: 2;
+    z-index: 20;
     padding: var(--rhythm);
 
     position: absolute;
@@ -163,8 +163,9 @@ div.back {
     width: 100%;
     background-color: var(--foreground-color);
     color: var(--background-color);
-    padding-top: 50%;
-    padding-bottom: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
