:construction: update css files

--- a/css/about.css
+++ b/css/about.css
@@ -33,17 +33,37 @@
 
 }
 
+@font-face {
+    font-family: 'spacegroteskbold';
+    src: url('../fonts/spacegrotesk-bold-webfont.woff2') format('woff2'),
+         url('../fonts/spacegrotesk-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'delagothicone';
+    src: url('../fonts/delagothicone-regular-webfont.woff2') format('woff2'),
+         url('../fonts/delagothicone-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 html {
     --color-surface: #f0f0f0;
     --color-light: #333333;
+    --color-accent-pink: #e80f8b;
+    --color-accent-yellow: #fbcd2c;
 
     --background-color: var(--color-surface);
     --foreground-color: var(--color-light);
 
     --font-regular: 'poppinsregular', 'rubik', sans-serif;
-    --font-light: 'poppinslight', var(--font-regular);
-    --font-bold: 'poppinsbold', var(--font-regular);
+    --font-light: 'spacegoteskbold', var(--font-regular);
+    --font-bold: 'delagothicone', var(--font-regular);
 
     --rhythm: 2rem;
 
@@ -64,13 +84,13 @@ body {
 
 /* nav bar */
 .logo img {
-    height: 36px;
-    width: 45px;
+    height: 45px;
     display: inline-block;
 }
 
 .hamb img{
-    width: 45px;
+    width: 30px;
+    height: 35px;
     float: right;
 
 }
@@ -104,6 +124,11 @@ h2 {
     text-transform: uppercase;
     font-size: 2rem;
     margin: 0;
+    color: var(--color-light);
+}
+
+h2 strong {
+    color: var(--color-accent-pink);
 }
 
 h3 {
@@ -237,20 +262,20 @@ div.back {
 }
 
 .menu li a {
-    font-family: var(--font-regular);
+    font-family: var(--font-bold);
     margin: auto;
     width: 100%;
     line-height: calc(4*var(--rhythm));
     font-size: 2rem;
     text-transform: uppercase;
     text-decoration: none;
-    color: var(--background-color);
+    color: var(--color-accent-yellow);
     list-style-type: none;
     text-align: center;
 }
 
 .menu li a:visited {
     list-style-type: none;
-    color: var(--background-color);
+    color: var(--color-accent-yellow);
     text-align: center;
 }
