--- a/css/about.css
+++ b/css/about.css
@@ -66,7 +66,6 @@ html {
     --font-bold: 'delagothicone', var(--font-regular);
 
     --rhythm: 2rem;
-
 }
 
 * {
@@ -109,7 +108,7 @@ img.profile {
     border-radius: 50%;
     margin: 1rem auto;
     display: block;
-
+    border: 4px solid var(--color-accent-yellow);
 }
 
 .aboutme {
@@ -117,23 +116,47 @@ img.profile {
     padding-top: 0;
     
 }
-
-h2 {
+h1, h2 {
     text-align: center;
     font-family: var(--font-bold);
     text-transform: uppercase;
     font-size: 2rem;
     margin: 0;
     color: var(--color-light);
+  /*  text-decoration: var(--color-accent-pink) underline;*/
+    position: relative;
 }
 
-h2 strong {
+h1 {
+    font-size: 2.5rem;
+}
+
+h2::before {
+    background-color: var(--color-accent-yellow);
+
+    content: "";
+    position: absolute;
+    width: calc(100% + 4px);
+    height: 60%;
+    left: -2px;
+    bottom: 2px;
+    z-index: -1;
+    transform: rotate(-2deg);
+}
+
+h1 strong {
     color: var(--color-accent-pink);
+    position: relative;
 }
 
-h3 {
+h3, p.skill{
     margin: 0;
     display: inline;
+    text-decoration:  var(--color-accent-pink) 2px wavy underline;
+}
+
+p.degree + ul {
+    margin-top: 1rem;
 }
 
 h3 + p {
@@ -185,30 +208,34 @@ p + h2, ul + h2, div + h2 {
 
 ul.projects li {
     list-style-type: none;
+    border: 1px solid var(--foreground-color);
+    margin: 1rem 0;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-ul.projects li a {
-    color: var(--foreground-color);
-    text-decoration: none;
-    line-height: 2rem;
-    font-family: var(--font-regular);
-    display: block;
-    margin: 1rem 0;
-    border: 1px solid var(--foreground-color);
-    padding: 1rem;
+ul.projects li img {
+    height: 40px;
+    float: right;
 }
+
 
 .link {
     margin: 2rem;
-    text-align: center;
-}
-.link a {
-    text-decoration: none;
-    color: var(--foreground-color);
+    color: var(--color-light);
     border: 1px solid var(--foreground-color);
-    padding: 1rem;
-    margin: 3rem auto;
+    margin: 1rem auto;
     font-family: var(--font-light);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.link a img {
+    width: 45px;
 }
 
 .social {
