:nail_care: update css files

--- a/css/about.css
+++ b/css/about.css
@@ -215,6 +215,7 @@ ul.projects li {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    text-transform: capitalize;
 }
 
 ul.projects li img {
