--- a/css/posterpage.css
+++ b/css/posterpage.css
@@ -34,16 +34,36 @@
 }
 
 
+@font-face {
+    font-family: 'spacegroteskbold';
+    src: url('../fonts/spacegrotesk-bold-webfont.woff2') format('woff2'),
+         url('../fonts/spacegrotesk-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'delagothicone';
+    src: url('../fonts/delagothicone-regular-webfont.woff2') format('woff2'),
+         url('../fonts/delagothicone-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html {
     --color-surface: #f0f0f0;
     --color-light: #333333;
+    --color-accent-pink: #e80f8b;
+    --color-accent-yellow: #fbcd2c;
 
     --background-color: var(--color-surface);
     --foreground-color: var(--color-light);
 
     --font-regular: 'poppinsregular', 'rubik', sans-serif;
-    --font-light: 'poppinslight', var(--font-regular);
-    --font-bold: 'poppinsbold', var(--font-regular);
+    --font-light: 'spacegoteskbold', var(--font-regular);
+    --font-bold: 'delagothicone', var(--font-regular);
 
     --rhythm: 2rem;
 
@@ -62,6 +82,26 @@ body {
     font-family: var(--font-light);
 }
 
+
+/* nav bar */
+.logo img {
+    width: 45px;
+    display: inline-block;
+}
+
+.hamb img{
+    width: 30px;
+    height: 35px;
+    float: right;
+
+}
+
+.navbar {
+    padding: var(--rhythm);
+    margin: 0 auto;
+    width: 100%;
+}
+
 /*body*/
 h2 {
     text-align: center;
@@ -73,37 +113,45 @@ h2 {
     margin-top: 0;
 }
 
+strong {
+    font-family: var(--font-bold);
+    color: var(--color-accent-pink);
+}
+
+.intro {
+    border: 1px solid var(--color-light);
+    padding: 1.5rem 0;
+    margin: 0 2rem;
+}
 
 .pic {
-    width: 20rem;
+    width: 100%;
+    max-width: 500px;
     margin: 0 auto;
-    margin-top: 1.5rem;
     display: block;
-    box-shadow: 2px 2px 10px var(--foreground-color);
+   /* box-shadow: 2px 2px 10px var(--foreground-color);*/
 }
 
 p {
     margin: 0 2.5rem;
     text-wrap: pretty;
-    line-height: 2rem;
+    line-height: 1.5rem;
 }
 
+/*
 p + p {
     margin-top: 1rem;
-}
+}*/
 
 p.description {
     font-family: var(--font-bold);
-    padding: 0.5rem;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     line-height: 1.5rem;
-    text-align: center;
     text-transform: capitalize;
-    margin: 1rem 2rem;
-
+    margin: 3rem 1rem 1rem 1rem;
 }
 
-
+/* previous - next */
 .option {
     margin: 2rem;
 }
@@ -123,45 +171,11 @@ h3 {
 }
 
 .option img {
-    width: 1.5rem;
+    width: 2.75rem;
     display: inline;
     vertical-align: middle;
-
+    margin: 0 0.5rem;
 }
-
-
-/* nav bar */
-.logo img {
-    height: 36px;
-    width: 45px;
-    display: inline-block;
-}
-
-.hamb img{
-    width: 45px;
-    float: right;
-    height: 45px;
-}
-
-
-.navbar {
-    padding: var(--rhythm);
-    margin: 0 auto;
-    width: 100%;
-}
-.navbar {
-    /*background-color: pink;
-    padding: var(--rhythm);*/
-    margin: 0 auto;
-
-    width: 100%;
-
-    position: relative;
-}
-
-
-
-
 
 /* menu */
 .back img {
@@ -187,6 +201,7 @@ div.back {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .menu ul {
@@ -201,19 +216,20 @@ div.back {
 }
 
 .menu li a {
-    font-family: var(--font-regular);
+    font-family: var(--font-bold);
     margin: auto;
     width: 100%;
     line-height: calc(4*var(--rhythm));
     font-size: 2rem;
     text-transform: uppercase;
     text-decoration: none;
-    color: var(--background-color);
+    color: var(--color-accent-yellow);
+    list-style-type: none;
     text-align: center;
 }
 
 .menu li a:visited {
     list-style-type: none;
-    color: var(--background-color);
+    color: var(--color-accent-yellow);
     text-align: center;
 }
