--- a/css/projects.css
+++ b/css/projects.css
@@ -117,8 +117,8 @@ h2 {
     margin: 2rem;
     margin-top: 0;
     color: var(--color-light);
+    text-wrap: pretty;
 }
-
 
 img {
     height: 100%;;
